icondir = $(ICONDIR)
desktopdir = $(DESKTOPDIR)

if BUILD_STUDIO
dist_desktop_DATA = info.exult.exult.desktop info.exult.studio.desktop
dist_icon_DATA = info.exult.exult.png info.exult.studio.png info.exult.exult.svg info.exult.studio.svg
else
dist_desktop_DATA = info.exult.exult.desktop
dist_icon_DATA = info.exult.exult.png info.exult.exult.svg
endif
