icondir = $(ICONDIR)
desktopdir = $(DESKTOPDIR)
svgdir = $(SVGDIR)
metadir = $(METADIR)

if BUILD_STUDIO
dist_desktop_DATA = info.exult.exult.desktop info.exult.exult.studio.desktop
dist_icon_DATA = info.exult.exult.png info.exult.exult.studio.png exult_warning.png
dist_svg_DATA = info.exult.exult.svg info.exult.exult.studio.svg exult_warning.svg
dist_meta_DATA = info.exult.exult.metainfo.xml info.exult.exult.studio.metainfo.xml
else
dist_desktop_DATA = info.exult.exult.desktop
dist_icon_DATA = info.exult.exult.png
dist_svg_DATA = info.exult.exult.svg
dist_meta_DATA = info.exult.exult.metainfo.xml
endif
