man_MANS = exult.6 expack.1 ipack.1 shp2pcx.1 splitshp.1 textpack.1 exult_studio.1 ucc.1

nobase_doc_DATA = \
	exult_studio.html		\
	faq.html			\
	ReadMe.html			\
	images/back.gif			\
	images/docs01.png		\
	images/docs02.png		\
	images/docs03.png		\
	images/docs04.png		\
	images/docs05.png		\
	images/docs06.png		\
	images/docs07.png		\
	images/docs08.png		\
	images/docs09.png		\
	images/docs10.png		\
	images/docs11.png		\
	images/exult_logo.gif		\
	images/studio01.png		\
	images/studio02.png		\
	images/studio03.png		\
	images/studio04.png		\
	images/studio05.png		\
	images/studio06.png		\
	images/studio07.png		\
	images/studio08.png		\
	images/studio09.png		\
	images/studio10.png		\
	images/studiobgiregs.png	\
	images/studiosiiregs.png	\
	images/exult_logo_nice.svg

EXTRA_DIST =		\
	xml/docs.dtd	\
	xml/docs.xml	\
	xml/exult_studio.xml	\
	xml/faq.xml	\
	xml/HowTo	\
	xml/html.xsl	\
	xml/Makefile	\
	xml/Makefile.win32	\
	xml/php.xsl	\
	xml/text.xsl	\
	$(man_MANS)	\
	$(nobase_doc_DATA)	\
	art.txt		\
	bgitems.txt	\
	exult2.txt	\
	exult_intrinsics.txt	\
	exult_studio.txt	\
	FLI.txt 	\
	interview	\
	IslandAddOn.txt	\
	MidiInfo.txt	\
	newgame.txt	\
	Planets.txt	\
	release.txt	\
	schedule.txt	\
	serpentsfx.txt	\
	siitems.txt	\
	u7combat.txt	\
	u7edit.txt	\
	u7eggs.txt	\
	u7itemtypes.txt	\
	u7monst.txt	\
	u7ready.txt	\
	u7tech.txt	\
	ucc.txt		\
	usecode32.txt	\
	usecode_bugs.txt	\
	usecode.dis	\
	usecode_ff.txt	\
	unknown		\
	weapons.txt

CLEANFILES = *~
