AM_CPPFLAGS = -I$(top_srcdir)/headers -I$(top_srcdir) -I$(top_srcdir)/files \
	-I$(top_srcdir)/shapes $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_LEVEL) $(OPT_LEVEL) $(WARNINGS) $(CPPFLAGS)

noinst_LTLIBRARIES = libshapeinf.la

libshapeinf_la_SOURCES = \
	ammoinf.cc	\
	ammoinf.h	\
	aniinf.cc	\
	aniinf.h	\
	armorinf.cc	\
	armorinf.h	\
	bodyinf.cc	\
	bodyinf.h	\
	continf.cc	\
	continf.h	\
	effhpinf.cc	\
	effhpinf.h	\
	expinf.cc	\
	expinf.h	\
	frnameinf.cc	\
	frnameinf.h	\
	frflags.cc	\
	frflags.h	\
	frusefun.cc	\
	frusefun.h	\
	gumpinf.cc	\
	gumpinf.h	\
	lightinf.cc	\
	lightinf.h	\
	monstinf.cc	\
	monstinf.h	\
	npcdollinf.cc	\
	npcdollinf.h	\
	objdollinf.cc	\
	objdollinf.h	\
	sfxinf.cc	\
	sfxinf.h	\
	warminf.cc	\
	warminf.h	\
	weaponinf.cc	\
	weaponinf.h

CLEANFILES = *~
